--- a/softwareproject/.settings/org.eclipse.core.resources.prefs
+++ b/softwareproject/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/m_index.jsp=UTF-8
 encoding//WebContent/m_index2.jsp=UTF-8
 encoding//src/user/UserRegisterCheckServlet.java=UTF-8
